# TeamDebian

./: README.md
Practica0_TeamDebian/: Documentación.md  Practica_0.ino  Práctica 0 - Documentación.md
Practica1_TeamDebian/: Practica1_TeamDebian.sln
Practica1_TeamDebian/Practica1_TeamDebian/: Practica 1.csproj  Program.cs  Team.Designer.cs  Team.cs
Practica1_TeamDebian/Practica1_TeamDebian/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Practica2_TeamDebian/: Practica2_TeamDebian.ino  Practica3_TeamDebian.ino  Práctica 2 - Documentación.md
Practica3_TeamDebian/: CMakeLists.txt  Practica3_TeamDebian.ino  Práctica 3 - Documentación.md  index.html  styles.css
Practica3_TeamDebian/src/: main.c
Practica4_TeamDebian/: Practica4-Documentacion.md  Practica4_TeamDebian.ino  Práctica 4-Documentación.md
Practica5_TeamDebian/: Practica5_TeamDebian.ino  Práctica 5 - Documentación.md
Proyecto_Final_TeamDebian/: Proyecto Final - Documentación.md  ProyectoFinal_TeamDebian.pde  Proyecto_Final_TeamDebian.ino
Práctica1_TeamDebian/: Form1.Designer.cs  Form1.cs  Program.cs  Práctica 1 - Documentación.md  Práctica 1 Team Debian.csproj  Práctica 1 Team Debian.sln
Práctica1_TeamDebian/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
